--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,5 @@
 
 * {
   @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,600;1,700&display=swap');
-  font-family: 'Playfair Display', serif;
+  font-family: 'Roboto', serif;
 }
