--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,5 @@
 @tailwind utilities;
 
 * {
-  @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,600;1,700&display=swap');
-  font-family: 'Roboto', serif;
+  font-family: 'Open Sans', sans-serif;
 }
